<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rel">

        <TextView
            android:id="@+id/welcomTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="40sp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/EasyGrey" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/welcomTextView"
            android:hint="@string/email"
            android:id="@+id/userNameLoginEditText"
            android:layout_margin="16dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_below="@+id/userNameLoginEditText"
            android:hint="@string/password"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:id="@+id/enterPasswordLoginEditText"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:id="@+id/checkBox"
            android:layout_below="@+id/enterPasswordLoginEditText"

            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="4dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_password"
            android:layout_alignBaseline="@+id/checkBox"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/checkBox"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/btnLoginSubmit"
            android:layout_width="190dp"
            android:layout_height="38dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/submit"
            android:layout_below="@+id/checkBox"
            android:textSize="13sp"
            android:layout_centerHorizontal="true"
            android:background="@color/GameGreen"
            android:layout_margin="16dp"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btnRegister" android:layout_width="190dp"
            android:layout_height="38dp"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/btnLoginSubmit"
            android:layout_centerHorizontal="true"
            android:text="@string/register"
            android:textColor="#fff"
            android:textSize="13sp"
            android:background="@color/BookBlue"/>

        <Button
            android:id="@+id/btnForgotPassword"
            android:layout_width="190dp"
            android:layout_height="38dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/forgot_password"
            android:textColor="#fff"
            android:textSize="13sp"
            android:layout_below="@+id/btnRegister"
            android:background="@color/MovieRed"
            android:layout_margin="16dp" />



    </RelativeLayout>


</ScrollView>